--- a/src/lab/exp4/simulation/1-D/index.html
+++ b/src/lab/exp4/simulation/1-D/index.html
@@ -3,7 +3,22 @@
 <head>
 <link rel = 'stylesheet' type = 'text/css' href = 'array.css' />
 <!-- <link href = 'http://fonts.googleapis.com/css?family=Inconsolata' rel = 'stylesheet' type = 'text/css' > -->
+<script src ="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src = 'array.js' ></script>
+<script>
+	$(document).ready(function()
+	{
+		$("#btnRandom").click(function()
+		{
+			$("#userInput").prop('readonly',true);
+		});
+		$("#btnManual").click(function()
+		{
+			$("#userInput").prop('readonly', false);
+		});
+	});
+</script>
+
 <title>Computer-Programming</title>
 </head>
 
